# causal-set-generator

./: .gitignore  pyproject.toml
masters/: .gitignore  rgg.py
results/: N-100__R-0.3__D-2__I-10
src/: analysis.py  edge_calc.pyx  max_graph.py  max_least_squares.py  max_longest_hypothesis.py  profile.prof  profiler  rgg.py  setup.py  test.py  utils.py  vectorized_rgg.py
src/adaptable_objects/conformal/: analysis.py  analysis2.py  analysis3.py  conformal_rgg.py  datamaker.py  greedy_curved.npy  greedy_e_curved.npy  longest_curved.npy  random_curved.npy  shoortest_curved.npy  test_confromal_BVP.py  utils.py
src/adaptable_objects/m_parameter_investigation/: analysis.py  analysis2.py  datamaker.py  path_rgg.py  utils.py
src/adaptable_objects/schwartzschild/: E-F.rgg.py  conformal_rgg.py  datamaker_coordist.py  mink_trial.py  (+7 more)
src/analysis/: an_utils.py  analysis.py  angle_analysis.py  distance_analysis.py  n_analysis.py  n_length_analysis.py  path_analysis.py  path_angle_analysis.py  path_length_analysis.py  path_separation_analysis.py  path_separation_analysis_log.py  utils.py  weight_analysis.py
src/cpandas/: edge_calc.pyx  setup.py  vectorized_rgg.py
src/logging/: handler.py  mlogger.py
src/max/: max_graph.py  max_longest_hypothesis.py
src/max_term2/: 3D_weights.py  data_maker.py  m_bright.py  path_interval.py  path_scaling.py  r_trans.py  scaling.py  scaling1.py  scaling2.py  test.py  utils.py  vec_rgg.py  weight_collections.py  weight_heatmap.py
src/mlogging/: handler.py  mlogger.py
src/report_images/: connections.py  geo_drawer.py  lorentz_drawer.py
(+39 files in other folders)
