[tool.poetry]
name = "masters"
version = "0.1.0"
description = ""
authors = ["AndrewsTDA <AndrewsTDA@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
numba = "0.58"
scipy = "^1.11.4"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
black = "^23.12.0"
isort = "^5.13.1"
requests = "^2.31.0"
flask = "^3.0.0"

[tool.isort]
skip_glob = ["venv*"]

[tool.poe.tasks]
black = "black ."
isort = "isort ."
af = ["black", "isort"]
logger = { script = "src.mlogging.handler:start_logger" }
multi = { script = "src.rgg:main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
